--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 npm-debug.log
 Desktop.ini
 .ftppass.json
+.gitkeep
 
 /app/src/assets/sass/vendor/bourbon
 /app/src/assets/sass/vendor/include-media
